--- a/css/style.css
+++ b/css/style.css
@@ -4,26 +4,57 @@
     box-sizing: border-box;
 }
 
+html {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 header {
     width: 100%;
     height: 80px;
+    display: flex;
+    align-items: center;
+}
+
+header img {
+    margin-left: 2rem;
+}
+
+header h2 {
+    margin-left: 1.5rem;
+}
+
+header form {
+    margin-left: 60rem;
 }
 
 main {
     width: 100%;
-    height: calc(100vh - 80px);
+    height: calc(100vh - 130px);
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #7fffd4;
 }
 
+footer {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+
+footer div {
+    margin-left: 2rem;
+}
+
 .grid-container {
+    display: none;
     height: 520px;
     width: 520px;
     border: 1px solid white;
     display: flex;
     flex-wrap: wrap;
+    cursor: pointer;
 }
 
 .grid-box {
@@ -42,4 +73,8 @@ main {
 
 .active {
     background-color: #6495ed;
+}
+
+.active-2 {
+    display: block;
 }
