--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,15 @@ header form {
     margin-left: 60rem;
 }
 
+form select {
+    width: 100px;
+}
+
+header button {
+    margin-top: .2rem;
+    margin-left: .5rem;
+    padding: 0rem 1rem;
+}
 main {
     width: 100%;
     height: calc(100vh - 130px);
